# tanks

./: .gitignore
include/common/: common.hpp  tank.hpp
include/server/: add_client.hpp  game.hpp  tank.hpp  utility.hpp
include/vis/: draw.hpp  net.hpp
scripts/: CMakeLists.txt  build.py
src/common/: common.cpp
src/server/: add_client.cpp  game.cpp  main.cpp  utility.cpp
src/vis/: draw.cpp  main.cpp  net.cpp
test/: knight.cpp  knights.h  knights_chicken.cpp
